--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -1,5 +1,133 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer Data (First 5 rows):\n",
+      "    Customer_ID      Customer_Name                   Customer_Email  \\\n",
+      "0     29771709      ยุภา เนตร์มณี  wilaasiniibuythiwaa@example.net   \n",
+      "1     24701161  ภัทราวุธ มิ่งขวัญ         vthnadaawuth@example.com   \n",
+      "2     90105639      รภัสพงษ์ ธีวร      zthmangrakssatw@example.net   \n",
+      "3     65781381       กฤตพร ราชมณี          otrakuulbuy@example.net   \n",
+      "4     56610530         หลี ถนอมพล  nawamandrrththichkr@example.net   \n",
+      "\n",
+      "        Customer_Phone                                   Customer_Address  \\\n",
+      "0           070-411891                       83/8 ถนนด้วงโสน กระบี่ 17740   \n",
+      "1  +66 (0) 828 602 597  77/2 ถนนดุริยพันธุ์ ตำบลป่าโนนสูง อำเภอเวียงชั...   \n",
+      "2        +66 3017 9784      1/1 ถนนทองสีไพล อำเภอหนองบัวแดง หนองคาย 85480   \n",
+      "3    +66 (0) 7363 9215        033 ถนนดาบเงิน ต.บัวบานเล็ก อ.นาแก มุกดาหาร   \n",
+      "4          0 7719 4811   73 หมู่ 37 ถ.ถนัดรักษา ภาษีเจริญ สิงห์บุรี 56400   \n",
+      "\n",
+      "    Product_Interest Partner_Status  Owner_Connection_Interest  \n",
+      "0       สินเชื่อบ้าน       Prospect                       True  \n",
+      "1  สินเชื่อส่วนบุคคล       Inactive                       True  \n",
+      "2     สินเชื่อธุรกิจ         Active                       True  \n",
+      "3         บัตรเครดิต       Prospect                       True  \n",
+      "4         บัตรเครดิต       Inactive                      False  \n",
+      "\n",
+      "CRM People Data (First 5 rows):\n",
+      "    PERSON_ID              FULL_NAME              ROLE  \\\n",
+      "0   99379708  จักรกฤนาย ธูปะวิโรจน์  Customer Service   \n",
+      "1   40315723       ศศิรินทร์ ไทนิยม           Manager   \n",
+      "2   37312510         กันตวรรณ ขุนดำ       Sales Agent   \n",
+      "3    7711943      ญาณพันธุ์ นิลเสนา            Dealer   \n",
+      "4   15254920          สัญชาน เพียยา            Dealer   \n",
+      "\n",
+      "                   BUSINESS_NAME   PHONE_NUMBER  \\\n",
+      "0        บริษัท มนทองกลการ จำกัด  0 894 547 504   \n",
+      "1  บริษัท ดวงทับทิมแพคกิ้ง จำกัด   089-371-5592   \n",
+      "2      ห้างหุ้นส่วนจำกัด ด้วงโสน   064 107 9054   \n",
+      "3           บริษัท ขันธุลา จำกัด    0 3406 6592   \n",
+      "4      หจก.ศรีอุ่นคอมมิวนิเคชั่น    0-3223-5953   \n",
+      "\n",
+      "                                        EMAIL       REGION   PRODUCT_CATEGORY  \\\n",
+      "0                  nilslawpiynuch@example.net       ภาคใต้         บัตรเครดิต   \n",
+      "1                       gdaawraam@example.com  ภาคตะวันออก         บัตรเครดิต   \n",
+      "2  ewiiyngcchanthuekpraaiphphaktr@example.com  ภาคตะวันออก  สินเชื่อส่วนบุคคล   \n",
+      "3                       laksmii10@example.com  ภาคตะวันออก             ประกัน   \n",
+      "4                tinratnphngsners@example.net      ภาคกลาง       สินเชื่อบ้าน   \n",
+      "\n",
+      "  CREATED_DATE  \n",
+      "0   2020-01-24  \n",
+      "1   2020-04-24  \n",
+      "2   2022-07-23  \n",
+      "3   2022-09-27  \n",
+      "4   2021-08-27  \n",
+      "\n",
+      "Data saved to customer_data.csv and crm_people_mock_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from faker import Faker\n",
+    "import pandas as pd\n",
+    "\n",
+    "fake = Faker('th_TH')  # Use Thai locale for more realistic Thai names and addresses\n",
+    "\n",
+    "\n",
+    "def create_customer_data(num_records=100):\n",
+    "    data = []\n",
+    "    for _ in range(num_records):\n",
+    "        data.append({\n",
+    "            'Customer_ID': fake.unique.random_number(digits=8),  # Ensure unique IDs\n",
+    "            'Customer_Name': fake.name(),\n",
+    "            'Customer_Email': fake.email(),\n",
+    "            'Customer_Phone': fake.phone_number(),\n",
+    "            'Customer_Address': fake.address(),\n",
+    "            'Product_Interest': fake.random_element(elements=(\n",
+    "                'สินเชื่อรถยนต์', 'สินเชื่อบ้าน', 'สินเชื่อส่วนบุคคล', 'สินเชื่อธุรกิจ', 'บัตรเครดิต', 'ประกัน'\n",
+    "            )),\n",
+    "            'Partner_Status': fake.random_element(elements=('Active', 'Inactive', 'Prospect')),\n",
+    "            'Owner_Connection_Interest': fake.boolean(chance_of_getting_true=70)  # 70% chance of being True\n",
+    "        })\n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "def create_crm_people_mock_data(num_records=100):\n",
+    "    data = []\n",
+    "    for _ in range(num_records):\n",
+    "        data.append({\n",
+    "            'PERSON_ID': fake.unique.random_number(digits=8),\n",
+    "            'FULL_NAME': fake.name(),\n",
+    "            'ROLE': fake.random_element(elements=(\n",
+    "                'Sales Agent', 'Customer Service', 'Manager', 'Broker', 'Dealer'\n",
+    "            )),\n",
+    "            'BUSINESS_NAME': fake.company(),\n",
+    "            'PHONE_NUMBER': fake.phone_number(),\n",
+    "            'EMAIL': fake.email(),\n",
+    "            'REGION': fake.random_element(elements=(\n",
+    "                'ภาคกลาง', 'ภาคเหนือ', 'ภาคตะวันออกเฉียงเหนือ', 'ภาคใต้', 'ภาคตะวันออก', 'ภาคตะวันตก'\n",
+    "            )),\n",
+    "            'PRODUCT_CATEGORY': fake.random_element(elements=(\n",
+    "                'สินเชื่อรถยนต์', 'สินเชื่อบ้าน', 'สินเชื่อส่วนบุคคล', 'สินเชื่อธุรกิจ', 'บัตรเครดิต', 'ประกัน'\n",
+    "            )),\n",
+    "            'CREATED_DATE': fake.date_this_decade()  # Dates within the current decade\n",
+    "        })\n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Generate the data\n",
+    "customer_df = create_customer_data(100)\n",
+    "crm_people_df = create_crm_people_mock_data(100)\n",
+    "\n",
+    "# Print some sample data (optional)\n",
+    "print(\"Customer Data (First 5 rows):\\n\", customer_df.head())\n",
+    "print(\"\\nCRM People Data (First 5 rows):\\n\", crm_people_df.head())\n",
+    "\n",
+    "# You can also save the data to CSV files:\n",
+    "customer_df.to_csv('customer_data.csv', index=False, encoding='utf-8-sig')  # Use utf-8-sig for better Thai support\n",
+    "crm_people_df.to_csv('crm_people_mock_data.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"\\nData saved to customer_data.csv and crm_people_mock_data.csv\")"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -7,7 +135,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
