--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -2,129 +2,219 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Customer Data (First 5 rows):\n",
-      "    Customer_ID      Customer_Name                   Customer_Email  \\\n",
-      "0     29771709      ยุภา เนตร์มณี  wilaasiniibuythiwaa@example.net   \n",
-      "1     24701161  ภัทราวุธ มิ่งขวัญ         vthnadaawuth@example.com   \n",
-      "2     90105639      รภัสพงษ์ ธีวร      zthmangrakssatw@example.net   \n",
-      "3     65781381       กฤตพร ราชมณี          otrakuulbuy@example.net   \n",
-      "4     56610530         หลี ถนอมพล  nawamandrrththichkr@example.net   \n",
+      "Customer Data:\n",
+      "    Customer_ID             Customer_Name  \\\n",
+      "0             1             วณัฐดา ธูปหอม   \n",
+      "1             2           สมปอง ทองปากน้ำ   \n",
+      "2             3     ภัคศุภางค์ ตั้งกุลงาม   \n",
+      "3             4         ศิริเกศ ทุมะบุตร์   \n",
+      "4             5           สุไฮลัน ดาบเงิน   \n",
+      "..          ...                       ...   \n",
+      "95           96    ณิชเชฏฐ์ ตรีครุธพันธุ์   \n",
+      "96           97            นาวีตา เดชคุ้ม   \n",
+      "97           98          สัญชาน สาระพันธ์   \n",
+      "98           99  ชรินทร์ทิพย์ ศาสตร์ศิลป์   \n",
+      "99          100         รังสินี นะวะมันดร   \n",
       "\n",
-      "        Customer_Phone                                   Customer_Address  \\\n",
-      "0           070-411891                       83/8 ถนนด้วงโสน กระบี่ 17740   \n",
-      "1  +66 (0) 828 602 597  77/2 ถนนดุริยพันธุ์ ตำบลป่าโนนสูง อำเภอเวียงชั...   \n",
-      "2        +66 3017 9784      1/1 ถนนทองสีไพล อำเภอหนองบัวแดง หนองคาย 85480   \n",
-      "3    +66 (0) 7363 9215        033 ถนนดาบเงิน ต.บัวบานเล็ก อ.นาแก มุกดาหาร   \n",
-      "4          0 7719 4811   73 หมู่ 37 ถ.ถนัดรักษา ภาษีเจริญ สิงห์บุรี 56400   \n",
+      "                               Customer_Email       Customer_Phone  \\\n",
+      "0               naatkhaayiisuchin@example.org    +66 (0) 4693 2691   \n",
+      "1                          snan39@example.net          02 957 1366   \n",
+      "2               nkhrethphentrrdii@example.org           0989404223   \n",
+      "3             bawephuuenphiailphr@example.com        +66 4367 2986   \n",
+      "4   phdungchaatitrakuulaimeriiyng@example.com           0831081449   \n",
+      "..                                        ...                  ...   \n",
+      "95              kantwrrnthwiiedch@example.net        +665 892 7576   \n",
+      "96                     anthikaa75@example.net            058968600   \n",
+      "97     thnadphimphkaarphiirphathn@example.net           055 416602   \n",
+      "98                         wphrmn@example.net  +66 (0) 837 355 546   \n",
+      "99                       rdisdain@example.net        0 689 917 512   \n",
       "\n",
-      "    Product_Interest Partner_Status  Owner_Connection_Interest  \n",
-      "0       สินเชื่อบ้าน       Prospect                       True  \n",
-      "1  สินเชื่อส่วนบุคคล       Inactive                       True  \n",
-      "2     สินเชื่อธุรกิจ         Active                       True  \n",
-      "3         บัตรเครดิต       Prospect                       True  \n",
-      "4         บัตรเครดิต       Inactive                      False  \n",
+      "                                     Customer_Address  \\\n",
+      "0   1/6 ถนนเตมิยะเดช ต.ก้อนแก้วเหนือ อ.ซับใหญ่ จ.ล...   \n",
+      "1   481 ถ.นักรบ ตำบลปากแจ่ม อำเภอเทพสถิต จังหวัดกร...   \n",
+      "2     088/66 ถ.ดวงทับทิม ต.โนนแดง อ.ศรีวิไล จ.สุโขทัย   \n",
+      "3   50/17 ถนนอัตตนาถ ต.หนองอิเฒ่า อ.โพนสวรรค์ ระนอ...   \n",
+      "4   076/84 ถ.เลขะพันธุ์ ต.บัวบาน อ.ภักดีชุมพล เชีย...   \n",
+      "..                                                ...   \n",
+      "95                    93 หมู่ 57 ซอยนิลวรรณ เลย 56990   \n",
+      "96       54 หมู่ 0 ซอยถนัดอักษร นาเชือก สระแก้ว 16220   \n",
+      "97   64/29 ถนนตรีครุธพันธุ์ ลำภูรา เขาสมิง น่าน 26350   \n",
+      "98      45/5 ถ.หิรัญสาลี อำเภอหนอกจอก กาญจนบุรี 72840   \n",
+      "99  55 หมู่ 06 ถ.ถาวรายุศม์ ต.ป่าบางแคใหญ่ อ.บึงกุ...   \n",
       "\n",
-      "CRM People Data (First 5 rows):\n",
-      "    PERSON_ID              FULL_NAME              ROLE  \\\n",
-      "0   99379708  จักรกฤนาย ธูปะวิโรจน์  Customer Service   \n",
-      "1   40315723       ศศิรินทร์ ไทนิยม           Manager   \n",
-      "2   37312510         กันตวรรณ ขุนดำ       Sales Agent   \n",
-      "3    7711943      ญาณพันธุ์ นิลเสนา            Dealer   \n",
-      "4   15254920          สัญชาน เพียยา            Dealer   \n",
+      "                                     Product_Interest Partner_Status  \\\n",
+      "0   เนื้อริบอาย, เนื้อสันใน, เนื้อบด, น้ำผึ้ง, นมส...       Inactive   \n",
+      "1                                    แครอท, กะหล่ำปลี     Interested   \n",
+      "2         กะหล่ำปลี, ผักบุ้ง, แครอท, ไข่ไก่, ผลไม้รวม         Active   \n",
+      "3   เนื้อบด, เนื้อสันใน, เนื้อสเต็ก, สันคอหมู, ปีก...           None   \n",
+      "4        ผลไม้รวม, น้ำผึ้ง, นมสด, ข้าวหอมมะลิ, ไข่ไก่       Inactive   \n",
+      "..                                                ...            ...   \n",
+      "95                  ปีกไก่, ไก่บด, ปลาแซลมอน, ปลากะพง           None   \n",
+      "96  หมูสามชั้น, ซี่โครงหมู, ผลไม้รวม, นมสด, ไข่ไก่...           None   \n",
+      "97            ปลาทูน่า, ปลาหมึก, ปลาแซลมอน, ปลาดอลลี่           None   \n",
+      "98                         หมูสไลซ์, หมูสามชั้น, นมสด         Active   \n",
+      "99                            แครอท, มะเขือเทศ, คะน้า       Inactive   \n",
       "\n",
-      "                   BUSINESS_NAME   PHONE_NUMBER  \\\n",
-      "0        บริษัท มนทองกลการ จำกัด  0 894 547 504   \n",
-      "1  บริษัท ดวงทับทิมแพคกิ้ง จำกัด   089-371-5592   \n",
-      "2      ห้างหุ้นส่วนจำกัด ด้วงโสน   064 107 9054   \n",
-      "3           บริษัท ขันธุลา จำกัด    0 3406 6592   \n",
-      "4      หจก.ศรีอุ่นคอมมิวนิเคชั่น    0-3223-5953   \n",
+      "   Owner_Connection_Interest  \n",
+      "0                       None  \n",
+      "1                      False  \n",
+      "2                       None  \n",
+      "3                       True  \n",
+      "4                      False  \n",
+      "..                       ...  \n",
+      "95                      None  \n",
+      "96                      True  \n",
+      "97                      None  \n",
+      "98                      True  \n",
+      "99                      None  \n",
       "\n",
-      "                                        EMAIL       REGION   PRODUCT_CATEGORY  \\\n",
-      "0                  nilslawpiynuch@example.net       ภาคใต้         บัตรเครดิต   \n",
-      "1                       gdaawraam@example.com  ภาคตะวันออก         บัตรเครดิต   \n",
-      "2  ewiiyngcchanthuekpraaiphphaktr@example.com  ภาคตะวันออก  สินเชื่อส่วนบุคคล   \n",
-      "3                       laksmii10@example.com  ภาคตะวันออก             ประกัน   \n",
-      "4                tinratnphngsners@example.net      ภาคกลาง       สินเชื่อบ้าน   \n",
+      "[100 rows x 8 columns]\n",
       "\n",
-      "  CREATED_DATE  \n",
-      "0   2020-01-24  \n",
-      "1   2020-04-24  \n",
-      "2   2022-07-23  \n",
-      "3   2022-09-27  \n",
-      "4   2021-08-27  \n",
+      "CRM People Data:\n",
+      "    PERSON_ID                    FULL_NAME                  ROLE  \\\n",
+      "0           1               วรรณาต ไตรบรรพ  Marketing Specialist   \n",
+      "1           2            กิติกานต์ นิลเสนา      Customer Support   \n",
+      "2           3                จรรยพร จันอ้น         Sales Manager   \n",
+      "3           4              ผดุงพล บุญบำรุง  Marketing Specialist   \n",
+      "4           5  อับดุลเลาะห์ ปรีชากุลเศรษฐ์      Customer Support   \n",
+      "..        ...                          ...                   ...   \n",
+      "95         96               สมพิศ แหยมศิริ      Regional Manager   \n",
+      "96         97            อริสรา นิยมสำหรวจ  Marketing Specialist   \n",
+      "97         98               ศิรณัฐ ธรรมฤดี      Customer Support   \n",
+      "98         99             ณิชาภัทร เดชคุ้ม      Customer Support   \n",
+      "99        100                รัฐพงษ์ แถมธน      Customer Support   \n",
       "\n",
-      "Data saved to customer_data.csv and crm_people_mock_data.csv\n"
+      "                            BUSINESS_NAME       PHONE_NUMBER  \\\n",
+      "0   บริษัท ตวันเยี่ยมการบัญชี จำกัด จำกัด        04 388 1449   \n",
+      "1          บจก.บุนยาภิสนท์จิวเวลรี่ มหาชน  +66 (0) 4221 9364   \n",
+      "2      บริษัท บุญบำรุงและบุตร จำกัด มหาชน        0-7482-3048   \n",
+      "3          บริษัท ธูปะวิโรจน์ จำกัด จำกัด       092 887 6921   \n",
+      "4        ห้างหุ้นส่วนจำกัด ดาวอร่าม มหาชน       098-721-1337   \n",
+      "..                                    ...                ...   \n",
+      "95         บริษัท ถนอมกุลบุตร จำกัด จำกัด      0 932 565 161   \n",
+      "96           บริษัท แจ้งสว่าง จำกัด มหาชน          073923428   \n",
+      "97      บริษัท ธูปหอม จำกัด (มหาชน) มหาชน        04 638 8233   \n",
+      "98            บริษัท นิยมธรรม จำกัด มหาชน         036-612034   \n",
+      "99    ธนาคารแหยมศิริจิวเวลรี่ จำกัด จำกัด        0-4073-0438   \n",
+      "\n",
+      "                              EMAIL     REGION PRODUCT_CATEGORY  \\\n",
+      "0     thaaraatwaneyiiym@example.com  เพชรบูรณ์         เนื้อวัว   \n",
+      "1      hnunsukhwrdaaphr@example.net      ยโสธร              ปลา   \n",
+      "2   wikicchdiskaprakaay@example.org  กำแพงเพชร              ปลา   \n",
+      "3        dwngcchanthr88@example.net  อุทัยธานี              ผัก   \n",
+      "4            cchamras78@example.net      ลำพูน              ผัก   \n",
+      "..                              ...        ...              ...   \n",
+      "95       wtriiephrinthr@example.com      สงขลา              ปลา   \n",
+      "96          haanaafii29@example.com   นราธิวาส         เนื้อหมู   \n",
+      "97       gniymsamhrwcch@example.net     พิจิตร              ผัก   \n",
+      "98     mnasnphkhechnthr@example.org   ศรีสะเกษ              ปลา   \n",
+      "99        ekiiyrtikng24@example.net      พะเยา              ปลา   \n",
+      "\n",
+      "           CREATED_DATE  \n",
+      "0   2024-01-29T10:26:35  \n",
+      "1   2023-06-16T06:58:51  \n",
+      "2   2025-03-10T10:07:04  \n",
+      "3   2024-03-06T17:17:16  \n",
+      "4   2025-03-07T00:09:18  \n",
+      "..                  ...  \n",
+      "95  2023-11-02T02:58:36  \n",
+      "96  2023-07-13T01:56:05  \n",
+      "97  2023-05-24T22:25:54  \n",
+      "98  2023-08-19T01:47:55  \n",
+      "99  2023-07-18T14:53:50  \n",
+      "\n",
+      "[100 rows x 9 columns]\n"
      ]
     }
    ],
    "source": [
     "from faker import Faker\n",
-    "import pandas as pd\n",
+    "import random\n",
+    "import datetime\n",
     "\n",
     "fake = Faker('th_TH')  # Use Thai locale for more realistic Thai names and addresses\n",
     "\n",
+    "# --- Product Information ---\n",
+    "products = {\n",
+    "    \"เนื้อหมู\": [\"หมูสามชั้น\", \"สันคอหมู\", \"ซี่โครงหมู\", \"หมูบด\", \"หมูสไลซ์\"],\n",
+    "    \"เนื้อวัว\": [\"เนื้อสันนอก\", \"เนื้อสันใน\", \"เนื้อริบอาย\", \"เนื้อบด\", \"เนื้อสเต็ก\"],\n",
+    "    \"เนื้อไก่\": [\"อกไก่\", \"สะโพกไก่\", \"ปีกไก่\", \"น่องไก่\", \"ไก่บด\"],\n",
+    "    \"ปลา\": [\"ปลาแซลมอน\", \"ปลาทูน่า\", \"ปลาดอลลี่\", \"ปลากะพง\", \"ปลาหมึก\"],\n",
+    "    \"ผัก\": [\"คะน้า\", \"ผักบุ้ง\", \"กะหล่ำปลี\", \"แครอท\", \"มะเขือเทศ\"],\n",
+    "    \"สินค้าเกษตรอื่นๆ\": [\"ข้าวหอมมะลิ\", \"ไข่ไก่\", \"นมสด\", \"น้ำผึ้ง\", \"ผลไม้รวม\"]\n",
+    "}\n",
     "\n",
-    "def create_customer_data(num_records=100):\n",
-    "    data = []\n",
-    "    for _ in range(num_records):\n",
-    "        data.append({\n",
-    "            'Customer_ID': fake.unique.random_number(digits=8),  # Ensure unique IDs\n",
-    "            'Customer_Name': fake.name(),\n",
-    "            'Customer_Email': fake.email(),\n",
-    "            'Customer_Phone': fake.phone_number(),\n",
-    "            'Customer_Address': fake.address(),\n",
-    "            'Product_Interest': fake.random_element(elements=(\n",
-    "                'สินเชื่อรถยนต์', 'สินเชื่อบ้าน', 'สินเชื่อส่วนบุคคล', 'สินเชื่อธุรกิจ', 'บัตรเครดิต', 'ประกัน'\n",
-    "            )),\n",
-    "            'Partner_Status': fake.random_element(elements=('Active', 'Inactive', 'Prospect')),\n",
-    "            'Owner_Connection_Interest': fake.boolean(chance_of_getting_true=70)  # 70% chance of being True\n",
+    "product_categories = list(products.keys())\n",
+    "\n",
+    "def generate_product_interest():\n",
+    "    num_interests = random.randint(1, 3)  # Customer can be interested in 1-3 products\n",
+    "    chosen_categories = random.sample(product_categories, num_interests)\n",
+    "    \n",
+    "    product_list = []\n",
+    "    for category in chosen_categories:\n",
+    "        product_list.extend(random.sample(products[category], random.randint(1, len(products[category])))) # Select random product with in category\n",
+    "    return \", \".join(product_list)\n",
+    "\n",
+    "\n",
+    "# --- Customer Data Generation ---\n",
+    "def generate_customer_data(num_records=100):\n",
+    "    customer_data = []\n",
+    "    for i in range(1, num_records + 1):\n",
+    "        customer_data.append({\n",
+    "            \"Customer_ID\": i,\n",
+    "            \"Customer_Name\": fake.name(),\n",
+    "            \"Customer_Email\": fake.email(),\n",
+    "            \"Customer_Phone\": fake.phone_number(),\n",
+    "            \"Customer_Address\": fake.address(),\n",
+    "            \"Product_Interest\": generate_product_interest(),\n",
+    "            \"Partner_Status\": random.choice([\"Active\", \"Inactive\", \"Interested\", None]),  # Added None for variety\n",
+    "            \"Owner_Connection_Interest\": random.choice([True, False, None])  # Added None, consider using an enum\n",
     "        })\n",
-    "    return pd.DataFrame(data)\n",
+    "    return customer_data\n",
     "\n",
+    "# --- CRM People Mock Data Generation ---\n",
+    "def generate_crm_people_data(num_records=100):\n",
+    "    crm_data = []\n",
+    "    for i in range(1, num_records + 1):\n",
+    "          crm_data.append({\n",
+    "            \"PERSON_ID\": i,\n",
+    "            \"FULL_NAME\": fake.name(),\n",
+    "            \"ROLE\": random.choice([\"Sales Manager\", \"Marketing Specialist\", \"Customer Support\", \"Distributor\", \"Regional Manager\"]),\n",
+    "            \"BUSINESS_NAME\": fake.company() + \" \" + random.choice([\"จำกัด\", \"มหาชน\"]), # more realistic Thai business names\n",
+    "            \"PHONE_NUMBER\": fake.phone_number(),\n",
+    "            \"EMAIL\": fake.email(),\n",
+    "            \"REGION\": fake.province(), # Use province for region in Thai\n",
+    "            \"PRODUCT_CATEGORY\": random.choice(product_categories + [\"All\"]),   # Added an \"All\" category\n",
+    "            \"CREATED_DATE\": fake.date_time_between(start_date='-2y', end_date='now').isoformat() # ISO format\n",
+    "          })\n",
+    "    return crm_data\n",
     "\n",
-    "def create_crm_people_mock_data(num_records=100):\n",
-    "    data = []\n",
-    "    for _ in range(num_records):\n",
-    "        data.append({\n",
-    "            'PERSON_ID': fake.unique.random_number(digits=8),\n",
-    "            'FULL_NAME': fake.name(),\n",
-    "            'ROLE': fake.random_element(elements=(\n",
-    "                'Sales Agent', 'Customer Service', 'Manager', 'Broker', 'Dealer'\n",
-    "            )),\n",
-    "            'BUSINESS_NAME': fake.company(),\n",
-    "            'PHONE_NUMBER': fake.phone_number(),\n",
-    "            'EMAIL': fake.email(),\n",
-    "            'REGION': fake.random_element(elements=(\n",
-    "                'ภาคกลาง', 'ภาคเหนือ', 'ภาคตะวันออกเฉียงเหนือ', 'ภาคใต้', 'ภาคตะวันออก', 'ภาคตะวันตก'\n",
-    "            )),\n",
-    "            'PRODUCT_CATEGORY': fake.random_element(elements=(\n",
-    "                'สินเชื่อรถยนต์', 'สินเชื่อบ้าน', 'สินเชื่อส่วนบุคคล', 'สินเชื่อธุรกิจ', 'บัตรเครดิต', 'ประกัน'\n",
-    "            )),\n",
-    "            'CREATED_DATE': fake.date_this_decade()  # Dates within the current decade\n",
-    "        })\n",
-    "    return pd.DataFrame(data)\n",
+    "# --- Generate the data ---\n",
+    "customer_data = generate_customer_data(100)\n",
+    "crm_people_data = generate_crm_people_data(100)\n",
     "\n",
+    "# --- Output (e.g., print to console, save to CSV, etc.) ---\n",
+    "import pandas as pd\n",
     "\n",
+    "customer_df = pd.DataFrame(customer_data)\n",
+    "crm_df = pd.DataFrame(crm_people_data)\n",
     "\n",
-    "# Generate the data\n",
-    "customer_df = create_customer_data(100)\n",
-    "crm_people_df = create_crm_people_mock_data(100)\n",
+    "print(\"Customer Data:\")\n",
+    "print(customer_df)\n",
     "\n",
-    "# Print some sample data (optional)\n",
-    "print(\"Customer Data (First 5 rows):\\n\", customer_df.head())\n",
-    "print(\"\\nCRM People Data (First 5 rows):\\n\", crm_people_df.head())\n",
+    "print(\"\\nCRM People Data:\")\n",
+    "print(crm_df)\n",
     "\n",
-    "# You can also save the data to CSV files:\n",
-    "customer_df.to_csv('customer_data.csv', index=False, encoding='utf-8-sig')  # Use utf-8-sig for better Thai support\n",
-    "crm_people_df.to_csv('crm_people_mock_data.csv', index=False, encoding='utf-8-sig')\n",
-    "print(\"\\nData saved to customer_data.csv and crm_people_mock_data.csv\")"
+    "# Save to CSV (optional)\n",
+    "customer_df.to_csv(\"customer_data.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "crm_df.to_csv(\"crm_people_data.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   }
  ],
